--- a/mod2_solution/CSS/styles.css
+++ b/mod2_solution/CSS/styles.css
@@ -3,56 +3,50 @@
   box-sizing: border-box;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin: 0;
 }
 
 h1 {
-	text-align: center;
+  text-align: center;
   margin-bottom: 15px;
   font-family: Helvetica;
 }
 
-#header1 {
-	border: 2px solid black;
+.sectionHeader {
+  border: 2px solid black;
+  margin-right: auto;
+  margin-left: auto;
+  position: absolute;
+  width: 30%;
+  height: 30px;
+  top: 0;
+  right: 0;
+  margin-top: 0;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+#sectionColour1 {
   background-color: #D59898;
-  width: 30%;
-  height: 30px;
-  position: relative;
-  left: -15px;
-  text-align: center;
-  float: right;
 }
 
-#header2 {
-  border: 2px solid black;
+#sectionColour2 {
   background-color: #C14543;
-  width: 30%;
-  height: 30px;
-  position: relative;
-  left: -15px;
-  text-align: center;
-  float: right;
 }
 
-#header3 {
-  border: 2px solid black;
-  background-color: #E5D198;
-  width: 30%;
-  height: 30px;
-  position: relative;
-  left: -15px;
-  text-align: center;
-  float: right;
+#sectionColour3 {
+  background-color: #E5D198 ;
 }
 
 .section {
   border: 2px solid black;
   background-color: #999999;
+  position: relative;
   min-height: 170px;
   margin-right: 15px;
   margin-left: 15px;
+  margin-bottom: 15px;
   padding: 10px;
-  padding-top: 40px;
+  padding-top: 30px;
   font-family: Helvetica;
   color: black;
 }
@@ -66,7 +60,7 @@ h1 {
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-
+    
   }
   .col-lg-1 {
     width: 8.33%;
@@ -110,6 +104,7 @@ h1 {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
+    
   }
   .col-md-1 {
     width: 8.33%;
@@ -148,4 +143,3 @@ h1 {
     width: 100%;
   }
 }
-
