Updated border on sectionHeader

--- a/mod2_solution/CSS/styles.css
+++ b/mod2_solution/CSS/styles.css
@@ -13,6 +13,8 @@ h1 {
 
 .sectionHeader {
   border: 2px solid black;
+  border-top: 0px;
+  border-right: 0px;
   margin-right: auto;
   margin-left: auto;
   position: absolute;
