--- a/mod3_solution/CSS/styles.css
+++ b/mod3_solution/CSS/styles.css
@@ -64,7 +64,7 @@
 
 /* HOME PAGE */
 .section h3 {
-position: relative;
+  position: relative;
   width: 30%;
   height: 30px;
   margin-top: 0;
@@ -86,6 +86,13 @@ position: relative;
   padding-top: 30px;
   font-family: Helvetica;
   color: black;
+}
+
+.section a{
+  color: #000000;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
 }
 
 /************************* Large devices only ************************/
